<resources>
    <string name="actionbar">K\'s Portfolio</string>
    <string name="app_name">K\'s Portfolio</string>
    <string name="welcome">\t\t\t\tWelcome!\nTo My Portfolio.</string>
    <string name="About_btn">ABOUT ME</string>
    <string name="Skills_btn">SKILLS</string>
    <string name="Projects_btn">PROJECTS</string>
    <string name="Contact_btn">CONTACT</string>
    <string name="Dev">Developed By @Kavya</string>
    <string name="about">
        Hi, I’m Kavy Chaturvedi 👋\n\n
        🎓 3rd Year B.Tech CSE Undergrad\n
        💻 Passionate about Android Development &amp; Cybersecurity\n
        🔒 Focused on Network Security, Ethical Hacking &amp; Penetration Testing\n
        ☕ Continuously Strengthening Java &amp; DSA\n
        🚀 Open to Internships, Projects &amp; Collaborations
    </string>

    <string name="profile_photo">Profile photo</string>
    <string name="about_me">About Me</string>
    <string name="exit">Exit</string>
    <string name="see_more_on">See More on\n</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="twitter">Twitter</string>
    <string name="email">Email</string>
    <string name="mails">ss3207428@gmail.com \n2k23.cscys2311172@gmail.com</string>
    <string name="number">+91-7xxxxxxx41</string>
    <string name="phone">Phone</string>
    <string name="address_desc">Address</string>
    <string name="address_text">Address</string>
    <string name="v_21_yashoda_nagar_near_namak_factory_chauraha_kanpur_nagar_uttar_pradesh">V-21, Yashoda Nagar, Near Namak Factory Chauraha, Kanpur nagar, Uttar Pradesh</string>
    <string name="front">Hey ,\nI\'m Kavya</string>
    <string name="projects_txt">What I’ve built</string>
    <string name="reach_out_to_me">Reach out to me</string>
    <string name="contacts">Contacts</string>
    <string name="things_i_m_good_at">Things I’m good at</string>
    <string name="skills">Skills</string>
    <string name="projects">Projects</string>
    <string name="learn_more_about_me">Learn about me</string>
    <string name="Proj1">F.R.U.I.T.S – Face Recognition Unified \tInterface Technology</string>
    <string name="proj1_desc">FRUITS, a group based project which allows secure login or sign-up using your face, just like ‘Sign in with Google’. Captures basic info and authenticates users seamlessly across websites.</string>
    <string name="Proj2">Tomato Leaf AI </string>
    <string name="proj2_desc">TomatoLeafAI is a deep learning classifier that detects diseases in tomato leaves using a custom CNN. It identifies Early Blight, Late Blight, or Healthy leaves and is part of Project Kisan, helping farmers with crop disease detection.</string>
    <string name="proj3">Portfolio APP</string>
    <string name="proj3_desc">A sleek Android app to showcase my projects, skills, and contact information, built with Java and Material Design for a clean, interactive user experience.</string>
    <string name="GIT">Visit On GitHub :-</string>
    <string name="github_portfolio">GITHUB_Portfolio</string>
    <string name="tomatoleaf_git">tomatoLeaf_GIT</string>
    <string name="visit_on_github">Visit On GitHub :-</string>
    <string name="fruits_git">FRUITS_git</string>
    <string name="technical_skills">Technical Skills</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="copyright">© 2025 Kavya Chaturvedi. All rights reserved.</string>
    <string name="about_meCard">I am a 3rd-year B.Tech Computer Science student currently learning Android app development and Cybersecurity. My interests include network security, ethical hacking, and penetration testing, along with strengthening my foundation in Java (DSA).</string>
    <string name="proj4">The Ledger</string>


</resources>