<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".AboutSection_activity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- main Card -->

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:strokeWidth="1dp"
            app:strokeColor="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Phone -->
                <LinearLayout
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/calling"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:lottie_rawRes="@raw/calling"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:elevation="6dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/phone"
                            android:textSize="20sp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/number"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray" />

                <!-- Email -->
                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/emailanim"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:lottie_rawRes="@raw/email"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/email"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/mails"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray" />

                <!-- Address -->
                <LinearLayout
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:lottie_rawRes="@raw/location"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/address_text"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_neue_regular"
                            android:text="@string/v_21_yashoda_nagar_near_namak_factory_chauraha_kanpur_nagar_uttar_pradesh"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/bebas_neue_regular"
                    android:gravity="center"
                    android:text="@string/see_more_on"
                    android:textSize="24sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    />

                <!-- Social Media Icons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp">

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@drawable/circular_bg"
                        android:contentDescription="@string/instagram"
                        android:padding="8dp"
                        android:src="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/linked"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/circular_bg"
                        android:contentDescription="@string/linkedin"
                        android:padding="8dp"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/git"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/circular_bg"
                        android:contentDescription="@string/github"
                        android:padding="8dp"
                        android:src="@drawable/github" />

                    <ImageView
                        android:id="@+id/x"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/circular_bg"
                        android:contentDescription="@string/twitter"
                        android:padding="8dp"
                        android:src="@drawable/twitter" />
                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:rotation="90"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/grey"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/slider" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loadingAnimation"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="38dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|bottom"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:strokeWidth="1dp"
            app:strokeColor="@android:color/darker_gray">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!-- Message Box -->
                <EditText
                    android:id="@+id/messageBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/sendBtn"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="48dp"
                    android:hint="@string/type_your_message_here"
                    android:gravity="top|start"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <!-- Send Button -->
                <ImageView
                    android:id="@+id/sendBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/send"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/copyrightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:rotation="180"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/exit"
            />


    </LinearLayout>
</ScrollView>
