<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Exit button pinned at top-right, but below ActionBar -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/exit_anim"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:lottie_rawRes="@raw/exit"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:rotation="180"
        android:contentDescription="@string/exit"
        app:lottie_colorFilter="@color/grey"/>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avtar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_avatar"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/bebas_neue_regular"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/sliderAnimation"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            app:lottie_rawRes="@raw/slider"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:rotation="270"
            app:lottie_colorFilter="@color/grey" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimation"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:visibility="gone"
            android:layout_gravity="center"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_colorFilter="@color/black" />

    </LinearLayout>

    <!-- Footer at bottom-right -->
    <TextView
        android:id="@+id/dev_txt"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/bebas_neue_regular"
        android:text="@string/Dev"
        android:textSize="18sp" />

</RelativeLayout>
